kubernetes/ingress.yaml
# kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-frontend
spec:
  ingressClassName: nginx
  rules:
  - host: react-app.local  # Make sure to configure this DNS entry if using locally
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend
            port:
              number: 80
